# afr-example-mqtt-ml-gesture-classification

./: .project  CMakeLists.txt  Makefile  README.md  main.c
.mtbLaunchConfigs/: afr-example-mqtt-ml-gesture-classification Attach (KitProg3_MiniProg4).launch  afr-example-mqtt-ml-gesture-classification Debug (KitProg3_MiniProg4).launch  afr-example-mqtt-ml-gesture-classification Erase (KitProg3_MiniProg4).launch  afr-example-mqtt-ml-gesture-classification Program (KitProg3_MiniProg4).launch
config_files/: FreeRTOSConfig.h
custom_linker_scripts/: cyb06xxa_cm4_dual.ld
custom_policy/: policy_multi_CM0_CM4_jitp.json  policy_multi_CM0_CM4_tfm.json
make_support/: afr.mk  mtb_feature_ota.mk
mtb_ml_gen/info/: magic_wand_log.txt
mtb_ml_gen/mtb_ml_models/: MAGIC_WAND_model_all.h
mtb_ml_gen/mtb_ml_regression_data/: MAGIC_WAND_x_data_fixed.h  MAGIC_WAND_x_data_flt.h  MAGIC_WAND_y_data_fixed.h  MAGIC_WAND_y_data_flt.h
source/: arm_math.h  control.c  control.h  gesture.c  gesture.h  iot_demo_mqtt_ml_gesture_classifier.c  mqtt_operation.c  mqtt_operation.h
source/cJSON/: cJSON.c
source/ml-inference/COMPONENT_ML_INT16x16/TOOLCHAIN_ARM/: libml-inference.ar
source/ml-inference/COMPONENT_ML_INT16x8/TOOLCHAIN_ARM/: libml-inference.ar
source/ml-inference/COMPONENT_ML_INT8x16/TOOLCHAIN_ARM/: libml-inference.ar
source/ml-inference/COMPONENT_ML_INT8x8/TOOLCHAIN_ARM/: libml-inference.ar
source/ml-middleware/: mtb_ml_common.h
